stacks/ghost/ghost-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost
  # namespace: default
spec:
  ports:
    - port: 2368
      protocol: TCP
      # targetPort: 80
  selector:
    app: ghost
  type: ClusterIP
